--- a/_posts/2015-08-23-boxplots.md
+++ b/_posts/2015-08-23-boxplots.md
@@ -71,9 +71,9 @@ t1 <- t.test(
 {% endhighlight %}
 
 
-| estimate| estimate1| estimate2| statistic|   p.value| parameter|  conf.low|  conf.high|
-|--------:|---------:|---------:|---------:|---------:|---------:|---------:|----------:|
-| -1.28566|  1.206106|  2.491766| -2.525504| 0.0407433|  6.739684| -2.498911| -0.0724094|
+| estimate| estimate1| estimate2| statistic|   p.value| parameter|  conf.low|  conf.high|method                  |alternative |
+|--------:|---------:|---------:|---------:|---------:|---------:|---------:|----------:|:-----------------------|:-----------|
+| -1.28566|  1.206106|  2.491766| -2.525504| 0.0407433|  6.739684| -2.498911| -0.0724094|Welch Two Sample t-test |two.sided   |
 
 After normalizing the data so that the controls are to equal 1.0, we no longer
 test for a difference between control and experimental distributions. Instead,
@@ -95,9 +95,9 @@ t2 <- t.test(
 {% endhighlight %}
 
 
-|  estimate| estimate1| estimate2| statistic|   p.value| parameter|  conf.low|  conf.high|
-|---------:|---------:|---------:|---------:|---------:|---------:|---------:|----------:|
-| -1.196441|         1|  2.196441| -8.018042| 0.0013126|         4| -1.610738| -0.7821436|
+|  estimate| estimate1| estimate2| statistic|   p.value| parameter|  conf.low|  conf.high|method                  |alternative |
+|---------:|---------:|---------:|---------:|---------:|---------:|---------:|----------:|:-----------------------|:-----------|
+| -1.196441|         1|  2.196441| -8.018042| 0.0013126|         4| -1.610738| -0.7821436|Welch Two Sample t-test |two.sided   |
 
 In this second test, the mean value for the control samples is
 1 instead of 1.2. We can see that
@@ -138,7 +138,7 @@ plot_bars <- function(dat, ttest) {
 grid.arrange(plot_bars(dat, t1), plot_bars(dat2, t2), nrow = 1)
 {% endhighlight %}
 
-![plot of chunk two-barplots]({{ site.baseurl }}/public/figures/two-barplots-1.png) 
+![plot of chunk two-barplots]({{ site.url }}/{{ site.baseurl }}/public/figures/two-barplots-1.png)
 
 Notice that the figure on the right might appear to show that there is a very
 significant difference between the experimental and control groups.
@@ -155,7 +155,7 @@ Normalizing the data so that the controls are equal to 1.0 causes two effects:
 A box plot is a good way to compare two or more distributions. Here's the
 anatomy of a boxplot created with [ggplot2]:
 
-![plot of chunk ggplot2-boxplot-anatomy]({{ site.baseurl }}/public/figures/ggplot2-boxplot-anatomy-1.png) 
+![plot of chunk ggplot2-boxplot-anatomy]({{ site.url }}/{{ site.baseurl }}/public/figures/ggplot2-boxplot-anatomy-1.png)
 
 I would like to see data presented with box plots as shown below instead of
 bar plots. I think the scientific question, "Are the distributions different
@@ -177,7 +177,7 @@ p2 <- ggplot(dat2) +
 grid.arrange(p1, p2, nrow = 1)
 {% endhighlight %}
 
-![plot of chunk two-boxplots]({{ site.baseurl }}/public/figures/two-boxplots-1.png) 
+![plot of chunk two-boxplots]({{ site.url }}/{{ site.baseurl }}/public/figures/two-boxplots-1.png)
 
 On the left, notice that the range of values in the control group overlaps
 with the range of values in the experimental group. The variation in the
