--- a/_slides/ggrepel/index.Rmd
+++ b/_slides/ggrepel/index.Rmd
@@ -25,6 +25,7 @@ output:
 options(htmltools.dir.version = FALSE)
 library(dplyr)
 library(gridExtra)
+library(patchwork)
 library(ggplot2)
 library(ggrepel)
 library(scales)
@@ -62,6 +63,15 @@ July 2018
 Kamil Slowikowski <br> [@slowkow](https://twitter.com/slowkow)
 ]
 
+???
+
+- Hello! I'm Kamil Slowikowski, the creator of ggrepel.
+
+- I'm also a PhD student in Bioinformatics at Harvard.
+
+- I want to show you a brief introduction to ggrepel, so you can get started
+  using it in your figures.
+
 ---
 
 # &#x1F61E; **Problem:** text placement
@@ -96,6 +106,17 @@ p1 <- p + geom_text() + labs(title = "geom_text()")
 p1
 ```
 ]
+
+
+???
+
+- Oftentimes, we want to know the identity of each data point in a figure.
+
+- Unfortunately, `geom_text()` does not always work as expected:
+  
+  - text labels often overlap with each other
+    
+  - sometimes they fall outside the plotting area
 
 ---
 
@@ -132,6 +153,17 @@ p2
 ```
 ]
 
+???
+
+- This problem motivated me to create ggrepel:
+  
+  - an extension for ggplot2 that automatically places text labels without
+    overlaps
+
+- I tried to make it very easy to use:
+
+  - just replace `geom_text()` with `geom_text_repel()`
+
 ---
 
 # &#x1F60A; Much better!
@@ -151,6 +183,11 @@ p2 <- p + geom_text_repel() + labs(title = "geom_text_repel()")
 
 gridExtra::grid.arrange(p1, p2, ncol = 2)
 ```
+
+???
+
+- Side by side, you can see that the figure using ggrepel is much
+  easier to read because the text is clearly visible.
 
 ---
 
@@ -177,6 +214,19 @@ p2 <- p + geom_text_repel() + labs(title = "geom_text_repel()")
 p2
 ```
 ]
+
+
+???
+
+- The idea behind ggrepel is very simple.
+
+- We want to repel text labels away from:
+
+  - other text labels
+
+  - data points
+
+  - and edges of the plotting area
 
 ---
 
@@ -260,11 +310,45 @@ ggplot() +
         axis.text = element_blank())
 ```
 
+???
+
+- I implemented a brute force algorithm of a physical simulation.
+
+- We iterate over all pairs of text labels and repel them away from each other.
+
+- We use a spring force to pull each text label back to its own data point.
+
+- Let's see it in action!
+
 ---
 
 # &#x1F40E; **ggrepel** in action
 
 <video src="index_files/animation.mp4" type="video/mp4" style="height:75%; margin-left:8%;" muted autoplay loop></video>
+
+???
+
+- This is an animation showing each step of the simulation on a loop.
+
+- The labels repel away from each other, and away from data points.
+
+- There is a spring force that pulls each label back to its own data point.
+
+- Notice that "Honda Civic" first moves away from its data point, and then
+  it is pulled back until it is directly adjacent.
+
+---
+
+# &#x1F40E; **ggrepel** in action
+
+<video src="index_files/resizing.mp4" type="video/mp4" style="height:70%; margin-left:8%;" muted autoplay loop></video>
+
+???
+
+- ggrepel works well with RStudio.
+
+- When you resize the plotting area, it will automatically recompute
+  the overlaps and adjust the label positions.
 
 ---
 
@@ -308,6 +392,134 @@ ggplot(downloads, aes(date, count_sum)) +
 ```
 ]
 
+???
+
+- ggrepel is easy to install and only depends on ggplot2. It has no
+  other dependencies.
+
+- This has quickly become the most popular piece of code I have ever written.
+
+- I've learned that people are happy when something just works.
+
+- Now let's take a look at a practical example.
+
+---
+
+# &#x1F30B; Example: Volcano
+
+.large[Which genes show significant differential expression?]
+
+```{r volcano, echo=FALSE, fig.height=7, fig.width=16, dpi=200}
+# Load packages
+
+# Read data from the web
+url <- "https://gist.githubusercontent.com/stephenturner/806e31fce55a8b7175af/raw/1a507c4c3f9f1baaa3a69187223ff3d3050628d4/results.txt"
+
+results <- read.table(url, header=TRUE)
+results <- mutate(results, sig=ifelse(results$padj<0.05, "FDR<0.05", "Not Sig"))
+
+results$label <- ""
+ix <- results$padj < 0.05
+results$label[ix] <- as.character(results$Gene[ix])
+
+p <- ggplot(results, aes(log2FoldChange, -log10(pvalue))) +
+  geom_point(aes(col = sig, size = sig)) +
+  scale_size_manual(values = c(2, 0.5), guide = FALSE) +
+  scale_color_manual(values=c("red", "black"), name = NULL) +
+  labs(x = bquote("Log"[2]~"Fold Change"), y = bquote("-Log"[10]~"P"))
+
+p1 <- p +
+  geom_text(
+    data = filter(results, padj < 0.05),
+    mapping = aes(label = Gene),
+    fontface = "italic",
+    size = 5
+  ) +
+  theme(legend.position = "none") +
+  labs(title = "geom_text()")
+p2 <- p +
+  geom_text_repel(
+    data = results,
+    mapping = aes(label = label),
+    force = 3,
+    max_time = 0.5,
+    max_iter = 1e5,
+    fontface = "italic",
+    size = 5
+  ) +
+  labs(title = "geom_text_repel()")
+
+p1 + p2
+```
+
+Thanks to [Stephen Turner] for the example data.
+
+[Stephen Turner]: http://www.gettinggeneticsdone.com/2016/01/repel-overlapping-text-labels-in-ggplot2.html
+
+???
+
+- In bioinformatics, we often do a differential gene expression test.
+
+- Then, we ask: which genes show significant differential expression?
+
+- With ggrepel, we can actually read the gene names. That's great.
+
+- However, these figures are not always easy to read.
+  
+- Sometimes ggrepel is not the best choice...
+
+---
+
+# &#x1F914; Consider other options
+
+.pull-left-large[
+- **ggrepel** is not always the best choice
+
+- Sometimes other plots are easier to read
+]
+
+.pull-right[
+```{r lollipop, echo=FALSE, fig.height=5, fig.width=5, dpi=200}
+# Load packages
+
+# Read data from the web
+url <- "https://gist.githubusercontent.com/stephenturner/806e31fce55a8b7175af/raw/1a507c4c3f9f1baaa3a69187223ff3d3050628d4/results.txt"
+
+results <- read.table(url, header=TRUE)
+results <- mutate(results, sig=ifelse(results$padj<0.05, "FDR<0.05", "Not Sig"))
+
+results$label <- ""
+ix <- results$padj < 0.05
+results$label[ix] <- as.character(results$Gene[ix])
+
+d <- subset(results, padj < 0.05)
+d$gene <- factor(d$Gene, d$Gene[order(d[["log2FoldChange"]])])
+d$hjust <- ifelse(d[["log2FoldChange"]] < 0, 1.1, -0.1)
+
+ggplot(d, aes_string(x = "log2FoldChange", y = "gene")) +
+  geom_point(size = 0.5) +
+  geom_text(aes(label = gene, hjust = hjust), fontface = "italic", size = 5) +
+  geom_segment(aes(xend = 0, yend = gene), size = 0.2) +
+  geom_vline(xintercept = 0, size = 0.2) +
+  labs(y = NULL, x = "Fold Change") +
+  theme(axis.line.y = element_blank(), axis.ticks.y = element_blank(), axis.text.y = element_blank()) +
+  scale_x_continuous(
+    expand = c(0.3, 0),
+    labels = function(x) fractional::fractional(2^x)
+  )
+```
+]
+
+???
+
+- It is not always a good idea to add text labels to your figure.
+
+- Sometimes other plots are easier to read.
+
+- If possible, try to keep your figures easy to understand.
+
+- Because if you're not careful, you might get a surprising result...
+
 ---
 
 # &#x1F92D; Don't label too many points!
@@ -321,6 +533,13 @@ Or else you will end up with [@accidental__aRt]
 </div>
 
 [@accidental__aRt]: https://twitter.com/accidental__aRt
+
+???
+
+- I see a lot of figures in the wild with too many text labels!
+
+- To avoid this situation, you might consider labeling a small subset of your
+  data points.
 
 ---
 
@@ -367,12 +586,21 @@ ggplot(dat2, aes(wt, mpg, label = car)) +
 ```
 ]
 
+???
+
+- You can use the empty string to hide most of the labels.
+
+- Then you can add labels for just a few data points.
+
+- By using the empty string strategy, we are saying that we want the unlabeled
+  data points to continue repelling the text from the labeled data points.
+
 ---
 
 # &#x1F393; Learn from examples in the [vignette]
 
 ```{r eval=FALSE, tidy=FALSE}
-vignette("ggrepel") # <- Run this in RStudio
+vignette("ggrepel") # <- Run this command in RStudio
 ```
 
 <div class="center">
@@ -380,6 +608,12 @@ vignette("ggrepel") # <- Run this in RStudio
 </div>
 
 [vignette]: https://cran.r-project.org/web/packages/ggrepel/vignettes/ggrepel.html
+
+???
+
+- For more examples, check out the vignette and feel free to copy code.
+
+- If you have a new example you'd like to share, please send it along!
 
 ---
 
@@ -399,6 +633,17 @@ vignette("ggrepel") # <- Run this in RStudio
 
 [Stackoverflow]: https://stackoverflow.com/search?q=ggrepel
 
+???
+
+- We have many open issues, and I don't have time to fix all of them.
+
+- If you want to contribute, please let me know and I'll do my best to get
+  you started.
+
+- For questions about using R and making figures, I like to use Stackoverflow
+
+- If you want to see more examples of ggplot extensions...
+
 ---
 
 # &#x1F4E6; [ggplot2 extension gallery](http://www.ggplot2-exts.org/gallery/)
@@ -406,6 +651,16 @@ vignette("ggrepel") # <- Run this in RStudio
 <div class="center">
 <img src="index_files/ggplot2-extension-gallery.png" alt="" style="width: 72%;">
 </div>
+
+???
+
+- The ggplot2 extension gallery has lots of examples that might
+  meet your needs.
+
+- After browsing, you might also get an idea for creating a new extension that
+  is useful for your own work!
+
+- If you want to make your own extension... I have some links for you.
 
 ---
 
@@ -432,6 +687,20 @@ vignette("ggrepel") # <- Run this in RStudio
 [Elio Campitelli]: https://github.com/eliocamp
 [Brodie Gaslam]: http://www.brodieg.com/
 
+???
+
+- I wish I had these resources when I started developing ggrepel.
+
+- Hadley's guide will show you how to make an extension, step by step.
+
+- Elio's guide will show you how to make a very generic extension that
+  works with any function which accepts a dataframe as input and produces
+  a similar dataframe as output.
+
+- Finally, if you want to learn more about the internals of ggplot, be sure to
+  look at Brodie's guide. It is the most comprehensive and detailed resource
+  about how ggplot2 works.
+
 ---
 
 # &#x1F4DA; Related work
@@ -449,6 +718,13 @@ vignette("ggrepel") # <- Run this in RStudio
 
 ]
 
+???
+
+- If you work with Python or Javascript, you might be interested to
+check out these projects.
+
+- They offer similar functionality to ggrepel.
+
 ---
 
 class: center
@@ -458,6 +734,10 @@ class: center
 These slides are available at:
 <br>
 ### [slowkow.com/ggrepel](https://slowkow.com/ggrepel)
+
+<br>
+<img src="index_files/twitter.svg" width="32px"></img>
+Kamil Slowikowski <br> [@slowkow](https://twitter.com/slowkow)
 ]
 
 <br><br>
@@ -465,3 +745,11 @@ These slides are available at:
 Made with &#x2694; [xaringan]
 
 [xaringan]: https://github.com/yihui/xaringan
+
+???
+
+- These slides are available online, so you can follow the links to all
+  the resources I highlighted.
+
+- Feel free to follow me and ask questions on twitter!
+
