--- a/content/notes/ggplot2-qqplot.Rmd
+++ b/content/notes/ggplot2-qqplot.Rmd
@@ -6,6 +6,8 @@ tags:
  - R
 categories: notes
 thumb: /notes/ggplot2-qqplot_files/figure-html/qqplot-with-lambda-1.png
+twitter:
+  card: "summary_large_image"
 ---
 
 ```{r setup, include=FALSE}
