--- a/content/notes/ggplot2-qqplot.Rmd
+++ b/content/notes/ggplot2-qqplot.Rmd
@@ -167,3 +167,11 @@ gg_qqplot(ps) +
   )
 ```
 
+# Try using qqplotr
+
+In 2018, [Alexandre Almeida][aloy] created the [qqplotr] R package, and it
+looks great! Try it out.
+
+[aloy]: https://github.com/aloy
+[qqplotr]: https://cran.r-project.org/package=qqplotr
+
