--- a/content/notes/colorgorical.Rmd
+++ b/content/notes/colorgorical.Rmd
@@ -26,7 +26,8 @@ Let's use the web API to retrieve a color palette:
 [jsonlite]: https://github.com/jeroen/jsonlite
 [Colorgorical]: http://vrl.cs.brown.edu/color
 
-```{r, warning=FALSE, echo=TRUE, message=FALSE, fig.width=12, fig.height=5}
+
+```{r warning=FALSE, echo=TRUE, message=FALSE, fig.width=12, fig.height=5}
 # install.packages(c("httr", "jsonlite"))
 
 colorgorical <- function(n = 10) {
@@ -75,6 +76,7 @@ ggplot(d, aes(x, y, fill = color)) +
   theme_void() +
   theme(legend.position = "none")
 ```
+
 
 You should also try <http://tools.medialab.sciences-po.fr/iwanthue/>
 
