--- a/content/notes/pca-benchmark/index.Rmd
+++ b/content/notes/pca-benchmark/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Benchmark principal component analysis (PCA) of scRNA-seq data in R"
 author: "Kamil Slowikowski"
-date: "2022-01-25"
+date: "2022-01-24"
 layout: post
 tags:
   - R
@@ -377,7 +377,7 @@ if (!file.exists(file_svds)) {
       opts = list(center = TRUE, scale = TRUE, maxitr = 2000, tol = 1e-10)
     )
   })
-  mat_svds$d <- mat_svds$d * 99.995
+  mat_svds$d <- mat_svds$d * sqrt(nrow(mat_svds$u) - 1)
   mat_svds$x <- mat_svds$u %*% diag(mat_svds$d)
   colnames(mat_svds$x) <- sprintf("PC%s", 1:n_pcs)
   qsave(mat_svds, file_svds)
@@ -392,9 +392,7 @@ mat_svds <- RSpectra::svds(
   k    = n_pcs,
   opts = list(center = TRUE, scale = TRUE)
 )
-# Magic data-dependent number to work around a bug
-# https://github.com/yixuan/RSpectra/issues/22
-mat_svds$d <- mat_svds$d * 99.995
+mat_svds$d <- mat_svds$d * sqrt(nrow(mat_svds$u) - 1)
 mat_svds$x <- mat_svds$u %*% diag(mat_svds$d)
 ```
 
@@ -673,7 +671,7 @@ if (file.exists(file_bench)) {
         },
         "RSpectra::svds()" = {
           retval <- RSpectra::svds(A = t(X), k = 20, opts = list(center = TRUE, scale = TRUE))
-          retval$d <- retval$d * 99.995
+          retval$d <- retval$d * sqrt(nrow(retval$u) - 1)
           retval$x <- retval$u %*% diag(retval$d)
           retval
         },
@@ -835,12 +833,6 @@ for computing the SVD for a sparse matrix with single-cell RNA-seq data.
 The `RSpectra::svds()` function has the most efficient memory usage, but it is
 almost the same as `irlba::irlba()`.
 
-It seems that there [may be a bug][rspectra22] in the `RSpectra::svds()`
-function that causes it to return incorrect eigenvalues (`svd$d`) when we use
-`opt = list(center = TRUE, scale = TRUE)`.
-
-[rspectra22]: https://github.com/yixuan/RSpectra/issues/22
-
 I would be grateful if you would tell me about any errors you found in this
 note. Please feel free to [contact me on Twitter][twitter] or email!
 
@@ -929,9 +921,7 @@ The [source code] for this note is available for you to read.
 [source code]: https://github.com/slowkow/slowkow.com/tree/master/content/notes/pca-benchmark/index.Rmd
 
 
-# Session Information
-
-Here are the version numbers at the time of writing:
+Here are the version numbers of the tested packages at the time of writing:
 
 ```{r versions, echo=FALSE}
 
@@ -951,10 +941,29 @@ knitr::kable(data.frame(
 
 ```
 
+# Related work
+
+This tutorial explains how to use `RSpectra::svds()` to get the same results as
+`stats::prcomp()`:
+
+- https://statr.me/2019/11/rspectra-center-scale/
+
+This benchmark compares different functions for PCA on large dense matrices:
+
+- https://privefl.github.io/blog/fast-r-functions-to-get-first-principal-components/
+
+PCA implementation for sparse matrices in Python:
+
+- https://github.com/niitsuma/delayedsparse/
+
+# Session information
+
 Here are the version numbers for all of the software:
 
+<details><summary>Session info</summary>
 ```{r session}
 sessionInfo()
 ```
+</details>
 
 
